fixed placeholder on mobile

--- a/projects/WeatherProject/styles/style.css
+++ b/projects/WeatherProject/styles/style.css
@@ -56,3 +56,10 @@ button:hover {
     color: red;
     margin-top: 20px;
 }
+
+@media (max-width: 600px) {
+    input {
+      font-size: 12px;
+      padding: 8px;
+    }
+  }
